MCP-72 Fix Docker SSLProtocolException (#64)